# C-for-programmerere

./: .gitignore  README.md
ov1/: CMakeLists.txt  main.cpp
ov2/: CMakeLists.txt  main.cpp  task1.cpp  task4.cpp  task5.cpp  task6.cpp  teori2-3-4.txt
ov3/: CMakeLists.txt  Vare.h  main.cpp  sirkel.cpp  task2.cpp  task3.cpp  task4.cpp
ov4/: CMakeLists.txt  LICENSE  README.md  task1.cpp  task2.cpp
ov5/: CMakeLists.txt  README.md  main.cpp
ov6/: CMakeLists.txt  README.md  chess.cpp  echo_server.cpp
ov7/broek/: CMakeLists.txt  broek.cpp  broek.hpp  broek_t.cpp
ov7/mengde/: CMakeLists.txt  main.cpp  mengde.cpp  mengde.hpp
ov8/: CMakeLists.txt  Par.cpp  ParTest.cpp  likhet.cpp  likhetTest.cpp
